--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </article>
     <div class="btn__cancel">
       <button>Proceed to Payment</button>
-      <p>Cancel Order</p>
+      <a href="#">Cancel Order</a>
     </div>
   </section>
 
